fix: compile SQL view backport test under JDK 8
PR #24174 backported the SQL View injection fix to 2.37 but
QueryUtilsTest used List.of(...), a Java 9+ API. It compiles under the
JDK 11 GitHub Actions CI yet breaks the EOS/stable release build, which
runs on JDK 8 and compiles test sources (-P jdk8,-default).

Replace List.of(...) with Arrays.asList(...) (already imported,
element-wise equal for the assertEquals checks).

Verified under JDK 8: dhis-service-core test sources compile and
QueryUtilsTest passes; speedy-spotless:check clean under JDK 11.

AI Assisted. Refs DHIS2-20174.